created theater object and getTheater prototype and added google apiKey

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <link rel="stylesheet" href="build/css/styles.css">
     <script src="build/js/vendor.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
-    <title>???</title>
+    <title>Theater Finder</title>
   </head>
   <body>
     <div class="container">
-      <h1>Yada Yada Yada!</h1>
-      <label for="location">Entersomething:</label>
-      <input id="location" type="text">
-      <button class="btn-success" id="getResult">Get Something!</button>
-      <div class="showResult"></div>
+      <h1>Theater Finder</h1>
+      <label for="name">Search for a theater in Portland by name:</label>
+      <input id="name" type="text">
+      <button class="btn-success" id="theaterName">Get Something!</button>
+      <div class="showTheater"></div>
     </div>
   </body>
 </html>
