add google map to index with some styling

--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <html>
   <head>
+    <meta name="viewport" content="initial-scale=1.0">
     <link rel="stylesheet" href="build/css/vendor.css">
     <link rel="stylesheet" href="build/css/styles.css">
     <script src="build/js/vendor.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDguHyzFv-BDYwATQe4a_BD6baKLvuyRbw&callback=initMap"></script>
     <title>Theater Finder</title>
   </head>
   <body>
     <div class="container">
+      <div id="map"></div>
+      <script>
+        var map;
+        function initMap() {
+          map = new google.maps.Map(document.getElementById('map'), {
+            center: {lat: 45.523375, lng: -122.676207},
+            zoom: 12
+          });
+        }
+      </script>
       <h1>Theater Finder</h1>
       <label for="name">Search for a theater in Portland by name:</label>
       <input id="name" type="text">
